[Markup] First hero section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,45 @@
   <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
+
+  <div class="l-container">
+    <div class="l-container__item">
+      <section class="first">
+        <section class="first__hero">
+          <nav class="first__nav">
+            <img class="first__logo" src="images/logo.svg" alt="">
+            <ul class="first__list">
+              <li class="first__item">
+                <a href="#" class="first__link">
+                  home
+                </a>
+              </li>
+              <li class="first__item">
+                <a href="#" class="first__link">
+                  shop
+                </a>
+              </li>
+              <li class="first__item">
+                <a href="#" class="first__link">
+                  about
+                </a>
+              </li>
+              <li class="first__item">
+                <a href="#" class="first__link">
+                  contact
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+
+        <section class="first__info">
+
+        </section>
+      </section>
+      
+    </div>
+  </div>
   Home
   Shop
   About
