[Markup] First info section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
         </section>
 
         <section class="first__info">
+          <h1 class="first__title">Discover innovative ways to decorate</h1>
+          <p class="first__desc">
+            We provide unmatched quality, comfort, and style for property owners across the country. 
+  Our experts combine form and function in bringing your vision to life. Create a room in your 
+  own style with our collection and make your property a reflection of you and what you love.
+          </p>
+          <a href="#" class="first__cta">
+            Shop now
+          </a>
 
+          <div class="first__toggler">
+            <button class="first__previous">
+              <img class="first__icon" src="images/icon-angle-left.svg" alt="Previous Slide">
+            </button>
+            <button class="first__forward">
+              <img class="first__icon" src="images/icon-angle-right.svg" alt="Next Slide">
+            </button>
+          </div>
         </section>
       </section>
       
