--- a/index.html
+++ b/index.html
@@ -71,8 +71,30 @@
             </button>
           </div>
         </section>
+
+
       </section>
       
+      <section class="second">
+        <div class="second__hero">
+          <img class="second__image" src="images/desktop-image-hero-2.jpg" alt="">
+        </div>
+
+        <div class="second__info">
+          <h2 class="second__title">About our furniture</h2>
+          <p class="second__desc">
+            Our multifunctional collection blends design and function to suit your individual taste.
+  Make each room unique, or pick a cohesive theme that best express your interests and what
+  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+  or anything in between. Product specialists are available to help you create your dream space.
+          </p>
+        </div>
+
+        <div class="second__hero">
+          <img class="second__image" src="images/desktop-image-hero-3.jpg" alt="">
+        </div>
+      </section>
+
     </div>
   </div>
   Home
