[Refactor + Fea] First hero, info misc + Desktop Interface - First Toggler

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <div class="first__toggler">
             <button class="first__previous">
               <img class="first__icon" src="images/icon-angle-left.svg" alt="Previous Slide">
-            </button>
-            <button class="first__forward">
+            </button><!--
+            --><button class="first__forward">
               <img class="first__icon" src="images/icon-angle-right.svg" alt="Next Slide">
             </button>
           </div>
