[Style] Media Query max-width < 1200px - Second section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       
       <section class="second">
         <div class="second__hero">
-          <img class="second__image" src="images/desktop-image-hero-2.jpg" alt="">
+          <img class="second__image" src="images/image-about-dark.jpg" alt="">
         </div>
 
         <div class="second__info">
@@ -91,7 +91,7 @@
         </div>
 
         <div class="second__hero">
-          <img class="second__image" src="images/desktop-image-hero-3.jpg" alt="">
+          <img class="second__image" src="images/image-about-light.jpg" alt="">
         </div>
       </section>
 
