[Markup/Style] Mobile Interface - Navigation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="first__hero">
           <nav class="first__nav">
             <img class="first__logo" src="images/logo.svg" alt="">
-            <ul class="first__list">
+            <ul class="first__list first__list--mobile js-list">
               <li class="first__item">
                 <a href="#" class="first__link">
                   home
@@ -45,6 +45,13 @@
               <li class="first__item">
                 <a href="#" class="first__link">
                   contact
+                </a>
+              </li>
+            </ul>
+            <ul class="first__menu first__menu--hidden first__menu--mobile js-menu">
+              <li class="first__menu-item">
+                <a href="#" class="first__menu-link">
+                  <img class="first__menu-logo js-menu-logo" src="images/icon-hamburger.svg" alt="">
                 </a>
               </li>
             </ul>
