--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Room homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap" rel="stylesheet">
   <link href="styles/reset.css" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="l-container">
@@ -61,9 +55,9 @@
         <section class="first__info">
           <h1 class="first__title">Discover innovative ways to decorate</h1>
           <p class="first__desc">
-            We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
+            We provide unmatched quality, comfort, and style for property owners across the country.
+            Our experts combine form and function in bringing your vision to life. Create a room in your
+            own style with our collection and make your property a reflection of you and what you love.
           </p>
           <a href="#" class="first__cta">
             Shop now
@@ -73,6 +67,7 @@
             <button class="first__previous">
               <img class="first__icon" src="images/icon-angle-left.svg" alt="Previous Slide">
             </button><!--
+            
             --><button class="first__forward">
               <img class="first__icon" src="images/icon-angle-right.svg" alt="Next Slide">
             </button>
@@ -81,7 +76,7 @@
 
 
       </section>
-      
+
       <section class="second">
         <div class="second__hero">
           <img class="second__image" src="images/image-about-dark.jpg" alt="">
@@ -91,9 +86,9 @@
           <h2 class="second__title">About our furniture</h2>
           <p class="second__desc">
             Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
+            Make each room unique, or pick a cohesive theme that best express your interests and what
+            inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+            or anything in between. Product specialists are available to help you create your dream space.
           </p>
         </div>
 
@@ -111,24 +106,24 @@
 
   Discover innovative ways to decorate
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
+  We provide unmatched quality, comfort, and style for property owners across the country.
+  Our experts combine form and function in bringing your vision to life. Create a room in your
   own style with our collection and make your property a reflection of you and what you love.
 
   Shop now
 
   We are available all across the globe
 
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
+  With stores all over the world, it's easy for you to find furniture for your home or place of business.
+  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our
   store locator. Any questions? Don't hesitate to contact us today.
 
   Shop now
 
   Manufactured with the best materials
 
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
+  to ensure that every product is made as perfect and as consistent as possible. With three decades of
   experience in this industry, we understand what customers want for their home and office.
 
   Shop now
@@ -139,11 +134,7 @@
   Make each room unique, or pick a cohesive theme that best express your interests and what
   inspires you. Find the furniture pieces you need, from traditional to contemporary styles
   or anything in between. Product specialists are available to help you create your dream space.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
   <script src="scripts/script.js"></script>
 </body>
+
 </html>
