[Markup] Toggler JavaScript

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="l-container">
     <div class="l-container__item">
       <section class="first">
-        <section class="first__hero">
+        <section class="first__hero js-hero">
           <nav class="first__nav">
             <img class="first__logo" src="images/logo.svg" alt="">
             <ul class="first__list first__list--mobile js-list">
@@ -53,8 +53,8 @@
         </section>
 
         <section class="first__info">
-          <h1 class="first__title">Discover innovative ways to decorate</h1>
-          <p class="first__desc">
+          <h1 class="first__title js-title">Discover innovative ways to decorate</h1>
+          <p class="first__desc js-desc">
             We provide unmatched quality, comfort, and style for property owners across the country.
             Our experts combine form and function in bringing your vision to life. Create a room in your
             own style with our collection and make your property a reflection of you and what you love.
@@ -64,11 +64,11 @@
           </a>
 
           <div class="first__toggler">
-            <button class="first__previous">
+            <button class="first__previous js-previous">
               <img class="first__icon" src="images/icon-angle-left.svg" alt="Previous Slide">
             </button><!--
             
-            --><button class="first__forward">
+            --><button class="first__forward js-next">
               <img class="first__icon" src="images/icon-angle-right.svg" alt="Next Slide">
             </button>
           </div>
